Fix new message icon alignment (#1145)

--- a/css/browser.css
+++ b/css/browser.css
@@ -133,6 +133,7 @@ html.sidebar-hidden ._1enh {
 	._6-xk {
 		height: auto !important;
 		padding-top: 36px !important;
+		flex-direction: column;
 	}
 }
 
